--- a/Datra.SampleData/Resources/Localizations/ja.csv
+++ b/Datra.SampleData/Resources/Localizations/ja.csv
@@ -19,3 +19,18 @@ Message_Goodbye,さようなら！,ログアウト
 Message_Loading,ロード中...,データロード
 Message_SaveComplete,セーブ完了,セーブ通知
 Message_Welcome,ようこそ！,初回ログイン
+QuestData.quest_main_001.name,始まりの旅,クエスト名
+QuestData.quest_main_001.description,村の長老に会って冒険を始めましょう。,クエスト説明
+QuestData.quest_main_001.Objectives#0.Description,村の長老と話す,クエスト目標
+QuestData.quest_main_001.Objectives#1.Description,村の近くのスライム5体を倒す,クエスト目標
+QuestData.quest_main_002.name,森の探検,クエスト名
+QuestData.quest_main_002.description,古代の祠を探して森へ冒険に出かけましょう。,クエスト説明
+QuestData.quest_main_002.Objectives#0.Description,回復ハーブを10個集める,クエスト目標
+QuestData.quest_main_002.Objectives#1.Description,森の祠に到達する,クエスト目標
+QuestData.quest_side_001.name,ハンターの依頼,クエスト名
+QuestData.quest_side_001.description,地元のハンターの仕事を手伝ってください。,クエスト説明
+QuestData.quest_side_001.Objectives#0.Description,野生のイノシシを3頭狩る,クエスト目標
+QuestData.quest_side_001.Objectives#1.Description,イノシシの牙を3つ集める,クエスト目標
+QuestData.quest_daily_001.name,デイリー訓練,クエスト名
+QuestData.quest_daily_001.description,毎日の戦闘訓練を完了してください。,クエスト説明
+QuestData.quest_daily_001.Objectives#0.Description,モンスターを10体倒す,クエスト目標
