Fix FixedLocale key case mismatch in localization CSV files
Keys generated by code use PascalCase (Name, Description) from nameof().
Updated CSV files to match:
- LocalizationKeys.csv: ItemData.*.Name/Description, QuestData.*.Name/Description
- en.csv, ko.csv, ja.csv: Same key case fixes

--- a/Datra.SampleData/Resources/Localizations/LocalizationKeys.csv
+++ b/Datra.SampleData/Resources/Localizations/LocalizationKeys.csv
@@ -4,40 +4,40 @@ Button_Exit,Exit button text,UI,false
 Button_OK,OK button text,UI,false
 Button_Settings,Settings button text,UI,false
 Button_Start,Start button text,UI,false
-CharacterData.hero_001.name,Character name for hero_001 (Arthur),Character,true
-CharacterData.hero_002.name,Character name for hero_002 (Marin),Character,true
-CharacterData.hero_003.name,Character name for hero_003 (Lena),Character,true
-CharacterData.hero_004.name,Character name for hero_004 (Thor),Character,true
-CharacterData.hero_005.name,Character name for hero_005 (Luna),Character,true
+CharacterData.hero_001.Name,Character name for hero_001 (Arthur),Character,true
+CharacterData.hero_002.Name,Character name for hero_002 (Marin),Character,true
+CharacterData.hero_003.Name,Character name for hero_003 (Lena),Character,true
+CharacterData.hero_004.Name,Character name for hero_004 (Thor),Character,true
+CharacterData.hero_005.Name,Character name for hero_005 (Luna),Character,true
 Error_FileNotFound,File not found error message,System,false
 Error_InvalidInput,Invalid input error message,System,false
 Error_NetworkDisconnected,Network disconnection error message,System,false
-ItemData.1001.description,Item description for 1001 (Iron Sword),Item,true
-ItemData.1001.name,Item name for 1001 (Iron Sword),Item,true
-ItemData.1002.description,Item description for 1002 (Leather Armor),Item,true
-ItemData.1002.name,Item name for 1002 (Leather Armor),Item,true
-ItemData.2001.description,Item description for 2001 (Health Potion),Item,true
-ItemData.2001.name,Item name for 2001 (Health Potion),Item,true
-ItemData.3001.description,Item description for 3001 (Magic Staff),Item,true
-ItemData.3001.name,Item name for 3001 (Magic Staff),Item,true
-ItemData.3002.description,Item description for 3002 (Mithril Armor),Item,true
-ItemData.3002.name,Item name for 3002 (Mithril Armor),Item,true
+ItemData.1001.Description,Item description for 1001 (Iron Sword),Item,true
+ItemData.1001.Name,Item name for 1001 (Iron Sword),Item,true
+ItemData.1002.Description,Item description for 1002 (Leather Armor),Item,true
+ItemData.1002.Name,Item name for 1002 (Leather Armor),Item,true
+ItemData.2001.Description,Item description for 2001 (Health Potion),Item,true
+ItemData.2001.Name,Item name for 2001 (Health Potion),Item,true
+ItemData.3001.Description,Item description for 3001 (Magic Staff),Item,true
+ItemData.3001.Name,Item name for 3001 (Magic Staff),Item,true
+ItemData.3002.Description,Item description for 3002 (Mithril Armor),Item,true
+ItemData.3002.Name,Item name for 3002 (Mithril Armor),Item,true
 Message_Goodbye,Goodbye message shown on logout,Dialog,false
 Message_Loading,Loading message,Dialog,false
 Message_SaveComplete,Save complete notification,Dialog,false
 Message_Welcome,Welcome message shown on first login,Dialog,false
-QuestData.quest_main_001.name,Quest name for quest_main_001,Quest,true
-QuestData.quest_main_001.description,Quest description for quest_main_001,Quest,true
+QuestData.quest_main_001.Name,Quest name for quest_main_001,Quest,true
+QuestData.quest_main_001.Description,Quest description for quest_main_001,Quest,true
 QuestData.quest_main_001.Objectives#0.Description,First objective of quest_main_001 (NestedLocale),Quest,true
 QuestData.quest_main_001.Objectives#1.Description,Second objective of quest_main_001 (NestedLocale),Quest,true
-QuestData.quest_main_002.name,Quest name for quest_main_002,Quest,true
-QuestData.quest_main_002.description,Quest description for quest_main_002,Quest,true
+QuestData.quest_main_002.Name,Quest name for quest_main_002,Quest,true
+QuestData.quest_main_002.Description,Quest description for quest_main_002,Quest,true
 QuestData.quest_main_002.Objectives#0.Description,First objective of quest_main_002 (NestedLocale),Quest,true
 QuestData.quest_main_002.Objectives#1.Description,Second objective of quest_main_002 (NestedLocale),Quest,true
-QuestData.quest_side_001.name,Quest name for quest_side_001,Quest,true
-QuestData.quest_side_001.description,Quest description for quest_side_001,Quest,true
+QuestData.quest_side_001.Name,Quest name for quest_side_001,Quest,true
+QuestData.quest_side_001.Description,Quest description for quest_side_001,Quest,true
 QuestData.quest_side_001.Objectives#0.Description,First objective of quest_side_001 (NestedLocale),Quest,true
 QuestData.quest_side_001.Objectives#1.Description,Second objective of quest_side_001 (NestedLocale),Quest,true
-QuestData.quest_daily_001.name,Quest name for quest_daily_001,Quest,true
-QuestData.quest_daily_001.description,Quest description for quest_daily_001,Quest,true
+QuestData.quest_daily_001.Name,Quest name for quest_daily_001,Quest,true
+QuestData.quest_daily_001.Description,Quest description for quest_daily_001,Quest,true
 QuestData.quest_daily_001.Objectives#0.Description,First objective of quest_daily_001 (NestedLocale),Quest,true
